Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -201,7 +201,8 @@ footer .widget.profile .twitter span {
 .companyheader {
   display: block;
   float: left;
-  padding: 11px 0px 7px
+  padding: 11px 0px 7px;
+  width: 25%;
 }
 
 .companyname a {
@@ -277,7 +278,7 @@ footer .widget.profile .twitter span {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 691px;
+  width: 75%;
 }
 
 .widget.extendednavigation a.pull {
@@ -285,7 +286,6 @@ footer .widget.profile .twitter span {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0;
   padding: 0;
 }
@@ -302,7 +302,6 @@ footer .widget.profile .twitter span {
 }
 .widget.extendednavigation ul.align-right li, .widget.extendednavigation ul.align-right li:hover ul li
 {
-  background-color: @color-swatch3;
   text-align: right;
 }
 
